# libxauto

./: Makefile  Makefile.in  README  configure.ac
docs/html/: display.html  index.html  keyboard.html  mouse.html  other.html  window.html  xaut.css
python/: egg-info  setup.py
python/xaut/: xaut.py
src/: Makefile.in  config.h  main.c  test_findwindow.c  test_sendtext.c  xaut.c  xaut.h  xaut_display.c  xaut_display.h  xaut_keyboard.c  xaut_keyboard.h  xaut_mouse.c  xaut_mouse.h  xaut_types.h  xaut_window.c  xaut_window.h  xautpy.i
